deploy/manifests/kgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: kgateway-system
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    kgateway.networking.k8s.io/gateway-name: gateway
